# RoadConditionsDashboard

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.0886a06  README.md  cardswidget.cpp  cardswidget.h  cardswidget.ui  chart.cpp  chart.h  controller.cpp  controller.h  design document.docx  linechart.cpp  linechart.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.h  piechart.cpp  piechart.h  searchBar.ui  searchbar.cpp  searchbar.h  util.cpp  util.h
APIC/: apiclient.cpp  apiclient.h  curlutil.cpp  curlutil.h
lib/: timeStamp.h
model/: maintenance.cpp  maintenance.h  roadcondition.cpp  roadcondition.h  trafficmessages.cpp  trafficmessages.h  weather.cpp  weather.h
parsers/: digitraffigparser.cpp  digitraffigparser.h  fmiparser.cpp  fmiparser.h
tests/: CMakeLists.txt  timestamp_test.cpp  traficmessagecount_test.cpp  weather_test.cpp
